<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appname">Remember Passwords</string>

    <!-- Check password -->
    <string name="log_in">Login</string>

    <!-- Empty screen (right panel) -->
    <string name="empty_screen">Choose an item from the left pane or create new one by choosing the option from menu.</string>

    <!-- First time screen -->
    <string name="welcome_text">This is your first launch of the application. You need to define password you will use to access your data.</string>
    <string name="password">Password</string>
    <string name="repeat_new_password_again">Repeat new password</string>
    <string name="create_account_for_me">Create Account</string>

    <!-- Items description -->
    <string name="notes">Notes</string>

    <!-- Items list -->
    <string name="you_do_not_have_any_passwords_yet_">You do not have any passwords yet.</string>
    <string name="title">Title</string>

    <!-- Menu long menu -->
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>

    <!-- Menu items description -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="show_password">Show Password</string>

    <!-- Menu items list -->
    <string name="add_new_item">Add New Item</string>

    <!-- Main activity -->
    <string name="settings">Settings</string>

    <!-- Menu new item -->
    <string name="save_item">Save Item</string>
    <string name="sure_you_want_to_delete">Are you sure you want to delete the item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_has_been_deleted">Item has been deleted.</string>
    <string name="item_already_exists">The item with a such name already exists.</string>
    <string name="fill_the_title">Please fill the title.</string>
    <string name="fill_both_fields_passwords_match">Fill both fields and make sure passwords match.</string>
    <string name="password_field_is_empty">Password field is empty.</string>
    <string name="password_copied_to_clipboard">Password copied to clipboard.</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="change_your_current_password">Change your current password</string>
    <string name="change_password">Change password</string>
    <string name="save_new_password">Save new password</string>
    <string name="generate_password">Generate password</string>
    <string name="letters">Letters</string>
    <string name="digits">Digits</string>
    <string name="both">Both</string>
    <string name="uppercase">Uppercase</string>
    <string name="lowercase">Lowercase</string>
    <string name="mixed">Mixed</string>
    <string name="generate">Generate</string>
    <string name="password_s_length">Password\'s length: </string>
    <string name="password_s_length_can_t_be_zero">Password\'s length can\'t be zero</string>
    <string name="refresh">Refresh</string>
    <string name="click_on_the_password_to_use_it_">Tap on the password to use it.</string>
    <string name="tap_and_hold_on_the_password_to_copy_it_">Tap and hold on the password to copy it.</string>
    <string name="ticket_has_been_updated_">Ticket has been updated.</string>
    <string name="written_by_eugene_beletskiy">Written by Eugene Beletskiy.</string>
    <string name="if_you_like_the_application_please_consider_leaving_positive_feedback_on_google_market">If you like the application please consider leaving positive feedback on Google Market.</string>
    <string name="please_fill_the_password_">Please fill the password.</string>
    <string name="you_have">"You have "</string>
    <string name="_attempts_left_afterwards_for_security_reasons_all_user_data_will_be_deleted">" more attempt(s) to provide correct password, afterwards for security reasons all user data will be deleted."</string>
    <string name="all_data_has_been_deleted">You exceeded the amount of allowed password tries so for security reasons all user\'s data has been deleted.</string>
    <string name="define_the_amount_of_max_password_attempts">Define the amount of max password attempts</string>
    <string name="reset_data">Reset data</string>

</resources>