<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/right_back"
    android:orientation="vertical"
    android:padding="100dip" >

    <LinearLayout
        android:layout_width="460dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/layout_round_corners"
        android:orientation="vertical"
        android:padding="20dip" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_s_length"
                android:textColor="@color/item_text_color" />

            <TextView
                android:id="@+id/generate_password_tv_password_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/item_text_color" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/generate_password_sb_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/inner_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp" >

                <RadioGroup
                    android:id="@+id/generate_password_rg_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/generate_password_rb_letters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/letters"
                        android:textColor="@color/item_text_color" />

                    <RadioButton
                        android:id="@+id/generate_password_rb_digits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digits"
                        android:textColor="@color/item_text_color" />

                    <RadioButton
                        android:id="@+id/generate_password_rb_both"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/both"
                        android:textColor="@color/item_text_color" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inner_two"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dark_item_color"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inner_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/generate_password_rg_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/generate_password_rb_upper_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uppercase"
                        android:textColor="@color/item_text_color" />

                    <RadioButton
                        android:id="@+id/generate_password_rb_lower_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lowercase"
                        android:textColor="@color/item_text_color" />

                    <RadioButton
                        android:id="@+id/generate_password_rb_mixed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/mixed"
                        android:textColor="@color/item_text_color" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/generate_password_ll_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/layout_round_corners_left_pane"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/generate_password_tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_item_color" />
        </LinearLayout>

        <Button
            android:id="@+id/generate_password_bt_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/generate" />
    </LinearLayout>
</LinearLayout>