<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/right_back"
    android:orientation="vertical"
    android:padding="100dip" >

    <LinearLayout
        android:layout_width="460dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/layout_round_corners"
        android:orientation="vertical"
        android:padding="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_your_current_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/changepassword_et_firstpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:password="true"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/changepassword_et_secondpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_password_again"
            android:password="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/changepassword_bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_new_password" />
    </LinearLayout>

</LinearLayout>